Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
Qt Creator 4.0.2, Qt Creator 4.2.0
-
None
-
W7 SP1 x64
-
1c5e771bd759f987d968cab0614296b5b42df2d1
Description
Whenever I try to drag&drop bookmark somewhere inside bookmark list and a small bar which shows the future position of a bookmark does NOT appear Qt Creator crashes.
Reproduced it multiple times, steps:
1) create two bookmarks
2) drag one of them somewhere inside the list so that small black bar does not appear
3) drop it
4) crash
Attachments
Issue Links
- resulted in
-
QTBUG-58077 Crash after drag&drop if using proxy model and QHeaderView::ResizeToContents
-
- Closed
-