Help: Fix crash when using drag&drop with bookmarks

On Windows the combination drag&drop, proxy model and header section
resize mode ResizeToContents leads to a crash in Qt.

Task-number: QTCREATORBUG-17547
Change-Id: I3a763c22b83e43d1c1a222cefb4fbbc56b9082c4
Reviewed-by: David Schulz <david.schulz@qt.io>